# Milyzway-Scanner

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.yml  install.sh  notes.md  pyproject.toml  requirements.txt  smartcontractplugin.md  targets_with_solidity.txt  vulnerable.sol
.github/workflows/: ci.yml
Milyzway_Scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
results/: scan_results.json  scan_results.json.json
scanner/: app.py  config.py  exceptions.py
scanner/examples/: targets.txt
scanner/plugins/: __init__.py  base.py  command_injection.py  cors.py  csrf.py  file_upload.py  graphql.py  idor.py  insecure_deserialization.py  jwt_auth.py  mythril.py  oauth.py  open_redirect.py  path_traversal.py  probe.py  rce.py  solidity.py  solidity_tools.py  sqli.py  ssrf.py  ssti.py  subdomain_takeover.py  waf_bypass.py  xpath.py  xss.py  xxe.py
scanner/utils/: bug_bounty_report.py  crawler.py  http.py  reporter.py  retry.py  scope.py
tests/: test_app.py  test_command_injection_plugin.py  test_cors_plugin.py  test_csrf_plugin.py  test_end_to_end.py  test_file_upload_plugin.py  test_graphql_plugin.py  test_idor_plugin.py  test_insecure_deserialization_plugin.py  test_jwt_auth_plugin.py  test_mythril_plugin.py  test_oauth_plugin.py  test_open_redirect_plugin.py  test_path_traversal_plugin.py  test_rce_plugin.py  test_sqli_plugin.py  test_ssrf_plugin.py  test_ssti_plugin.py  test_subdomain_takeover_plugin.py  test_waf_bypass_plugin.py  test_xpath_plugin.py  test_xss_plugin.py  test_xxe_plugin.py  tests_fails.md  vulnerable.sol
(+3 files in other folders)
